[tool.poetry]
name = "codequality-parser"
version = "0.1.0"
description = "Parser for CodeQuality HTML Reports"
authors = ["Harisyam Manda"]

[tool.poetry.dependencies]
python = "^3.8"
pygithub = {git = "https://github.com/PyGithub/PyGithub.git"}
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
lxml = "^4.9.0"
html5lib = "^1.1"
tabulate = "^0.8.10"
mdutils = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
